# sway.module_loader-wav

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets-defaults.json  CMakeUserPresets.json  README.md
lib/: exports.json
lib/cxx/include/sway/loader/: wav.hpp
lib/cxx/include/sway/loader/wav/: _prerequisites.hpp  _typedefs.hpp  wavplugin.hpp
lib/cxx/src/: wavplugin.cpp
lib/cxx/tests/google/: CMakeLists.txt  README.md  loader.spec.cpp
